# chiral-transfermatrix

./: README.md  Tutorial_TSCAT.tex  chiral_transfermatrix.py  pyproject.toml  transfermat_scatt.py  tscat.py
.github/workflows/: python-package.yml
chiral_transfermatrix/: __init__.py
examples/: LongVersion.ipynb  Phys.Rev.A107L021501.ipynb  Phys.Rev.A109023528.ipynb  PlotsLongVers.ipynb  transfermat_scatt.py
tests/: test_1.npz  test_1.py  test_1a.npz  test_1a.py  test_2.npz  test_2.py  test_2a.npz  test_2a.py  test_3.npz  test_3.py  test_3a.npz  test_3a.py
tests/test_1/: test_1.npz
tests/test_2/: test_2.npz
tests/test_3/: test_3.npz
