[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "transfermat_scatt"
authors = [{name = "Lorenzo Mauro"},
           {name = "Jacopo Fregoni"},
           {name = "Remi Avriller"},
           {name = "Johannes Feist", email = "johannes.feist@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.15",
]

[project.urls]
Home = "https://github.com/jfeist/transfermat_scatt"
