[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "chiral-transfermatrix"
authors = [{name = "Johannes Feist", email = "johannes.feist@gmail.com"},
           {name = "Lorenzo Mauro"},
           {name = "Jacopo Fregoni"},
           {name = "Remi Avriller"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.15",
]

[project.urls]
Home = "https://github.com/jfeist/chiral-transfermatrix"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-regressions>=2.6.0",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 200
[tool.ruff.format]
skip-magic-trailing-comma = true
